--- a/src/App.scss
+++ b/src/App.scss
@@ -6,12 +6,43 @@
 .abs-center {
   align-items: center;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   height: 100%;
+  justify-content: center;
 }
 
 .wrapper {
   display: flex;
   justify-content: space-evenly;
   height: 100%;
+}
+
+.pulse {
+  width: 125px;
+  height: 125px;
+  background: rgb(217, 217, 217);
+  border-radius: 50%;
+  animation: animate 2s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    box-shadow: 0 0 0 0 rgba(224, 224, 224, 0.7),
+      0 0 0 0 rgba(224, 224, 224, 0.7);
+  }
+
+  40% {
+    box-shadow: 0 0 0 50px rgba(224, 224, 224, 0),
+      0 0 0 0 rgba(224, 224, 224, 0.7);
+  }
+
+  80% {
+    box-shadow: 0 0 0 50px rgba(224, 224, 224, 0),
+      0 0 0 30px rgba(224, 224, 224, 0);
+  }
+
+  100% {
+    box-shadow: 0 0 0 0 rgba(224, 224, 224, 0),
+      0 0 0 30px rgba(224, 224, 224, 0);
+  }
 }
