--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,25 @@
 .app {
   background-color: #b85032;
   height: 100vh;
+
+  .pulse {
+    width: 130px;
+    height: 130px;
+    background: rgb(240, 240, 240);
+    border-radius: 50%;
+    animation: animate 2s linear infinite;
+  }
+
+  .wrapper {
+    display: flex;
+    justify-content: space-evenly;
+    height: 100%;
+  }
+
+  .name {
+    color: #fff;
+    font-size: 25px;
+  }
 }
 
 .abs-center {
@@ -9,20 +28,6 @@
   flex-direction: column;
   height: 100%;
   justify-content: center;
-}
-
-.wrapper {
-  display: flex;
-  justify-content: space-evenly;
-  height: 100%;
-}
-
-.pulse {
-  width: 125px;
-  height: 125px;
-  background: rgb(217, 217, 217);
-  border-radius: 50%;
-  animation: animate 2s linear infinite;
 }
 
 @keyframes animate {
